[project]
name = "cgse-tools"
version = "0.22.1"
description = "Tools for CGSE"
authors = [
    {name = "IvS KU Leuven"}
]
maintainers = [
    {name = "Rik Huygen", email = "rik.huygen@kuleuven.be"},
    {name = "Sara Regibo", email = "sara.regibo@kuleuven.be"}
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "CGSE",
    "Common-EGSE",
    "hardware testing",
    "software framework"
]
dependencies = [
    "cgse-common",
    "textual>=2.0.0",
]

[project.scripts]
cgse-status = "egse.tools.status:main"

[project.entry-points."cgse.version"]
cgse-tools = 'egse.version:get_version_installed'

[project.entry-points."cgse.command"]
admin = 'cgse_tools.cgse_admin:app'
init = 'cgse_tools.cgse_commands:init'
top = 'cgse_tools.cgse_commands:top'
clock = 'cgse_tools.cgse_clock:clock'
show = 'cgse_tools.cgse_commands:show'
check = 'cgse_tools.cgse_commands:check'

[project.entry-points."cgse.service.example"]
dev-x = 'cgse_tools.cgse_services:dev_x'

[tool.hatch.build.targets.sdist]
exclude = [
    "/tests",
    "/pytest.ini",
    "/.gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/egse", "src/cgse_tools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]
